--- a/src/css/index.css
+++ b/src/css/index.css
@@ -150,23 +150,22 @@ body {
     margin: auto;
 }
 
+.sticky-nav-reference {
+    position: absolute;
+}
+
 .sticky-nav {
     position: -webkit-sticky;
     position: absolute -webkit-sticky;
     position: sticky;
     top: 0;
+    margin-top: -4rem;
     z-index: 20;
     width: 100%;
     height: 4rem;
-    padding-top: 0.5rem;
     overflow: hidden;
-    /* display: flex;
-    flex-wrap: wrap; */
-    justify-content: space-between;
     border-top: 2px solid var(--color-accent);
-    /* background: var(--gradient-linear-2steps); */
     background-color: rgba(0, 0, 0, 0.5);
-    /* box-shadow: 0 5px 5px 0 var(--background-darker-transparent); */
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
     transition: all 0.2s ease-in;
@@ -175,7 +174,7 @@ body {
 .sticky-nav-container {
     max-width: 80rem;
     max-height: 4rem;
-    margin: 0.2rem auto 0 auto;
+    margin: 0.8rem auto 0 auto;
     display: flex;
     /* flex-wrap: wrap; */
     align-items: center;
@@ -884,15 +883,11 @@ body {
 
 /* SECTION Tweaks and decoration */
 
-.sticky-nav-reference {
-    margin-top: -2px;
-}
-
 .hidden {
     opacity: 0;
     overflow: hidden;
-    height: 0;
     z-index: 0;
+    /* height: 0; */
 }
 
 .dark-container {
@@ -903,26 +898,6 @@ body {
     background-color: var(--background-darker-transparent);
     /* min-width: 25rem;
     max-width: 40rem; */
-}
-
-.move-up-top {
-    top: -5rem;
-}
-
-.move-up-margin {
-    margin-top: 0rem;
-}
-
-.move-up-margin--photo {
-    margin-top: 2rem;
-}
-
-.move-down {
-    margin-top: 5rem;
-}
-
-.move-left {
-    margin-left: 0rem;
 }
 
 .dividing-line--horizontal--dark,
@@ -1115,9 +1090,6 @@ body {
         /* padding: 0 2rem; */
         max-width: 40rem;
     }
-    .nav__logos-container {
-        margin-left: 1rem;
-    }
 }
 @media (min-width: 750px) {
     .hero__main-text {
@@ -1148,7 +1120,7 @@ body {
         display: flex;
     }
     .sticky-nav-container {
-        margin-top: -0.2rem;
+        margin-top: 0.4rem;
     }
 }
 @media (min-width: 1100px) {
@@ -1169,7 +1141,7 @@ body {
     }
     .sticky-nav-container .nav__logos-container {
         display: flex;
-        margin: 0.5rem auto;
+        margin: auto;
     }
     .nav__bio-container img {
         display: block;
