--- a/src/css/index.css
+++ b/src/css/index.css
@@ -62,7 +62,7 @@ html {
     box-sizing: inherit;
     margin: 0;
     padding: 0;
-    /*outline: 1px dashed blue; /* Debugging purposes */
+    /* outline: 1px dashed blue; /* Debugging purposes */
 }
 
 /* SECTION Body */
@@ -378,64 +378,58 @@ body {
     padding: 1rem;
 }
 
-/* .article__title--dark {
-    margin: auto;
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
-    font-family: var(--font-highlights);
-    font-size: 2.5rem;
-    text-transform: uppercase;
-    text-align: center;
-} */
-
-/* .article__title--dark {
-    background: var(--gradient-linear);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-} */
-
 /* SECTION Buttons */
 
 /* Button faces */
 
+.button--dark-container,
+.button--light-container {
+    margin: 1rem auto;
+    text-decoration: none;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    display: block;
+    border: none;
+}
+
 .button--dark,
-.button-light {
+.button--light {
     width: -webkit-fit-content;
     width: -moz-fit-content;
     width: fit-content;
     cursor: pointer;
     display: flex;
-    text-decoration: none;
     font-family: var(--font-highlights);
     font-size: 1rem;
     letter-spacing: 0.1em;
-    margin: 1rem auto;
     padding: 1rem;
     border-radius: 5px;
     border: none;
     outline-offset: 4px;
-    box-shadow: 0 0 0 0 var(--color-accent-background);
+    box-shadow: 0 5px 0 0 transparent;
+    margin: auto;
     transition: 0.1s all;
 }
 
 .card .button--dark {
     padding: 0.5rem;
 }
+.card .button--dark-container {
+    margin-top: auto;
+}
 
-.button--dark,
-.card__button {
+.button--dark {
     color: var(--color-light);
     background: var(--color-accent);
 }
 
-.button-light {
+.button--light {
     color: var(--color-accent);
     background: var(--color-light);
 }
 
-.button-light__icon {
+.button--light__icon {
     height: 1.2rem;
     width: 1.2rem;
     margin: -0.1rem 0.5rem 0 0;
@@ -455,20 +449,10 @@ body {
         brightness(104%) contrast(102%);
 }
 
-.section__body__button__text,
-.card__button__text {
-    font-family: var(--font-highlights);
-    font-size: 1rem;
-    text-transform: uppercase;
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
-}
-
 /* Hover and Focus */
 
-.button--dark:hover,
-.button--dark:focus,
+.button--dark-container:hover .button--dark,
+.button--dark-container:focus .button--dark,
 .card__button:focus,
 .card__button:hover {
     box-shadow: 0 5px 0 0 var(--color-accent-background),
@@ -477,8 +461,8 @@ body {
     transform: translateY(-5px);
 }
 
-.button-light:hover,
-.button-light:focus {
+.button--light-container:hover .button--light,
+.button--light-container:focus .button--light {
     box-shadow: 0 5px 0 0 var(--color-accent-background),
         0 0 7px 4px rgba(255, 255, 255, 0.2);
     background: var(--color-light);
@@ -486,8 +470,8 @@ body {
     transform: translateY(-5px);
 }
 
-.button-light:hover .button-light__icon,
-.button-light:focus .button-light__icon {
+.button--light:hover .button--light__icon,
+.button--light:focus .button--light__icon {
     -webkit-filter: invert(16%) sepia(75%) saturate(4390%) hue-rotate(352deg)
         brightness(88%) contrast(101%);
     filter: invert(16%) sepia(75%) saturate(4390%) hue-rotate(352deg)
@@ -496,75 +480,16 @@ body {
 
 /* Active */
 
-.button--dark:active,
+.button--dark-container:active .button--dark,
 .card__button:active {
     box-shadow: none;
     background: var(--color-accent-secondary);
     transform: translateY(0px);
 }
 
-.button-light:active {
+.button--light:active {
     box-shadow: none;
     background: var(--color-light);
-    transform: translateY(0px);
-}
-
-/* Card buttons */
-
-.card__footer__button,
-.card__footer__button--light {
-    cursor: pointer;
-    display: block;
-    /* margin: 2rem auto 0 auto; */
-    padding: 0.2rem;
-    border: 1px solid var(--background-dark-transparent-border);
-    border-radius: 5px;
-    transition: 0.2s all;
-}
-
-.card__footer__button {
-    background: var(--background-dark-transparent);
-}
-
-.card__footer__button--light {
-    background: var(--color-light);
-}
-
-.card__footer__button__text {
-    font-family: var(--font-highlights);
-    font-size: 1rem;
-    text-transform: uppercase;
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
-    background: var(--gradient-linear);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-}
-
-.card__footer__button--light:focus,
-.card__footer__button--light:hover,
-.card__footer__button:focus,
-.card__footer__button:hover {
-    box-shadow: 0 4px 0 0 var(--color-accent), 0 6px 6px 0 rgba(0, 0, 0, 0.5);
-    transform: translateY(-3px);
-}
-
-.card__footer__button--light:focus,
-.card__footer__button--light:hover {
-    background: var(--color-light);
-}
-
-.card__footer__button:focus,
-.card__footer__button:hover {
-    background: var(--background-darker-transparent);
-}
-
-.card__footer__button:active,
-.card__footer__button--light:active {
-    box-shadow: none;
-    background: var(--background-darker-transparent);
     transform: translateY(0px);
 }
 
