--- a/src/css/index.css
+++ b/src/css/index.css
@@ -75,6 +75,8 @@ body {
 /* SECTION Hero */
 
 .hero__top-container {
+    position: relative;
+    z-index: 30;
     height: 50vh;
     min-height: 31.875rem; /* 512 px */
     width: 100%;
@@ -280,7 +282,7 @@ body {
     text-decoration: none;
     border: 1px solid transparent;
     border-radius: 5px;
-    transition: all 0.2s ease-in;
+    transition: all 0.15s ease-in;
 }
 
 .nav__link,
