--- a/src/css/index.css
+++ b/src/css/index.css
@@ -21,13 +21,18 @@
 
     --transparency-light: rgba(255, 255, 255, 0.2);
 
-    --gradient-linear: linear-gradient(
+    --gradient-linear--light: linear-gradient(
+        to bottom,
+        #fff 20%,
+        transparent 50%
+    );
+    --gradient-linear--color: linear-gradient(
         to top right,
         #1a2a6c 0%,
         #b21f1f 40%,
         #fdbb2d 90%
     );
-    --gradient-linear-2steps: linear-gradient(
+    --gradient-linear--color-2steps: linear-gradient(
         to top right,
         #b21f1f 0%,
         #fdbb2d 100%
@@ -80,7 +85,7 @@ body {
     height: 50vh;
     min-height: 31.875rem; /* 512 px */
     width: 100%;
-    background: var(--gradient-linear);
+    background: var(--gradient-linear--color);
 }
 
 /* SECTION Hero - Header */
@@ -265,6 +270,11 @@ body {
     box-shadow: none;
 }
 
+.nav__link-container {
+    text-decoration: none;
+    margin: 0 0.5rem;
+}
+
 .nav__link,
 .nav__link:link,
 .nav__link:visited,
@@ -274,7 +284,6 @@ body {
 .footer__content__nav__link,
 .footer__content__logo {
     display: block; /* To make transform work */
-    margin: 0 0.5rem;
     letter-spacing: 0.05em;
     font-family: var(--font-highlights);
     font-size: 1rem;
@@ -299,8 +308,8 @@ body {
     padding: 0 0.2rem;
 }
 
-.nav__link:focus,
-.nav__link:hover,
+.nav__link-container:focus .nav__link,
+.nav__link-container:hover .nav__link,
 .sticky-nav__link:focus,
 .sticky-nav__link:hover {
     border: 1px solid var(--color-light);
@@ -310,7 +319,7 @@ body {
     transform: translateY(-3px);
 }
 
-.nav__link:active,
+.nav__link-container:active .nav__link,
 .sticky-nav__link:active,
 /* The following selector is needed for JavaScript */
 .sticky-nav__link.sticky-nav__link--active {
@@ -500,7 +509,7 @@ body {
 .section__header {
     height: 14rem;
     width: 100%;
-    background: var(--gradient-linear);
+    background: var(--gradient-linear--color);
 }
 
 .section__header {
@@ -580,7 +589,8 @@ body {
 }
 
 .section__body__highlight {
-    background: var(--color-light);
+    /* background: var(--color-light); */
+    background: var(--gradient-linear--light);
 }
 
 .section__body__highlight--transparent {
@@ -605,14 +615,15 @@ body {
     max-width: 22rem;
     margin: 0 auto;
     padding: 1rem;
-    background: var(--color-light);
+    /* background: var(--color-light); */
+    background: var(--gradient-linear--light);
     border-radius: 5px;
 }
 
 .section__body__background {
     position: relative;
     top: 5rem;
-    background: var(--gradient-linear);
+    background: var(--gradient-linear--color);
 }
 
 .section__body__highlight__picture {
@@ -620,7 +631,7 @@ body {
     height: 21.25rem;
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
     padding: 1rem;
     background-color: var(--color-light);
     border-radius: 50%;
@@ -655,7 +666,7 @@ body {
     /* height: 32rem; */
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
     border-radius: 5px;
     background: #ffffff;
     box-shadow: 0px 15px 15px rgba(0, 0, 0, 0.25);
@@ -673,7 +684,7 @@ body {
 }
 
 .card__nav:last-child {
-    background: var(--gradient-linear);
+    background: var(--gradient-linear--color);
     width: 3.4375rem;
     height: 3.4375rem;
     border-radius: 50%;
@@ -775,7 +786,7 @@ body {
     font-family: var(--font-normal);
     font-size: 1rem;
     background: var(--background-dark-transparent);
-    background-image: var(--gradient-linear);
+    background-image: var(--gradient-linear--color);
     background-repeat: no-repeat;
     background-position: 0 calc(100% + 2px), 0 0;
     background-size: 100% 2px;
@@ -854,7 +865,7 @@ body {
 .footer__background {
     width: 100%;
     height: 20rem;
-    background: var(--gradient-linear);
+    background: var(--gradient-linear--color);
     overflow: hidden;
     position: relative;
 }
@@ -883,6 +894,7 @@ body {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: flex-start;
+    flex: 0 0 auto;
     z-index: 10;
 }
 
@@ -1057,8 +1069,11 @@ body {
             0 4px 0 #cccccc, 0 5px 0 #cccccc, 0 6px 0 #cccccc, 0 7px 0 #cccccc,
             0 8px 0 #cccccc, 0 9px 0 #cccccc, 0 50px 30px rgba(0, 0, 0, 0.3);
     }
-    .nav__link {
+    /* .nav__link {
         margin: 0 2rem;
+    } */
+    .nav__link-container {
+        margin: 0 1rem;
     }
     .nav__logo {
         margin: 0 1rem;
